--- a/Android/lab06/lab06/app/src/main/res/layout/fruit_item.xml
+++ b/Android/lab06/lab06/app/src/main/res/layout/fruit_item.xml
@@ -13,14 +13,14 @@
         android:id="@+id/fruit_english_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:id="@+id/fruit_chinese_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp" />
 
 </LinearLayout>
