--- a/火车售票管理系统/TTMsystem/web/src/style/style.css
+++ b/火车售票管理系统/TTMsystem/web/src/style/style.css
@@ -4,9 +4,9 @@
 }
 
 #login-box {
+    margin-bottom: 105px;
     /*padding: 1em;*/
     top: 15%;
-    height: 60%;
     /* 边框圆角 */
     border-radius: 10px;
     /* 背景透明 */
@@ -16,4 +16,18 @@
 #login-box input {
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.25);
+}
+
+.form-control-feedback {
+    position: absolute;
+    padding-top: 1rem;
+    left: 1rem;
+}
+
+.input-group {
+    position: relative;
+}
+
+.input-group input {
+    padding-left: 5rem;
 }
