--- a/火车售票管理系统/TTMsystem/web/admin/style/page.less
+++ b/火车售票管理系统/TTMsystem/web/admin/style/page.less
@@ -17,7 +17,7 @@
       line-height: 70px;
       font-size: 20px;
       font-weight: 700;
-      color: #ff7f50;
+      color: #2980b9;
       letter-spacing: .05em;
     }
 
@@ -33,10 +33,10 @@
       .nav-list {
         ul {
           .a_active {
-            background-color: #f1f2f6;
+            background-color: #dfe6e9;
 
             .active {
-              color: #ff7f50 !important;
+              color: #2980b9 !important;
               font-weight: 700;
             }
           }
@@ -86,7 +86,7 @@
               }
 
               .active-li-a {
-                color: #ff7f50 !important;
+                color: #2980b9 !important;
                 font-weight: 700;
               }
 
