--- a/火车售票管理系统/TTMsystem/web/admin/style/page.less
+++ b/火车售票管理系统/TTMsystem/web/admin/style/page.less
@@ -9,7 +9,8 @@
     top: 0;
     height: 100%;
     width: 240px;
-    background-color: #FFFFFF;
+    color: #d2dae2;
+    background-color: #000000;
     box-shadow: 10px 0px 17px rgba(72, 72, 72, 0.1);
 
     .LogoName {
@@ -17,7 +18,7 @@
       line-height: 70px;
       font-size: 20px;
       font-weight: 700;
-      color: #2980b9;
+      color: #d2dae2;
       letter-spacing: .05em;
     }
 
@@ -26,17 +27,17 @@
         padding: 12px 20px !important;
         letter-spacing: .05em;
         font-size: 11px;
-        color: #5a5454;
+        color: #FFFFFF;
         font-weight: 700;
       }
 
       .nav-list {
         ul {
           .a_active {
-            background-color: #dfe6e9;
+            background-color: #2d8cf0;
 
             .active {
-              color: #2980b9 !important;
+              color: #d2dae2 !important;
               font-weight: 700;
             }
           }
@@ -50,7 +51,7 @@
               display: block;
               padding: .65rem 1.5rem;
               font-size: 14px;
-              color: #5a5454;
+              color: #d2dae2;
 
               .bx {
                 font-size: 17px;
@@ -80,13 +81,13 @@
                 display: block;
                 padding: .65rem 1.5rem;
                 font-size: 13px;
-                color: #5a5454;
+                color: #d2dae2;
                 transition: all .3s;
                 margin-left: 0px;
               }
 
               .active-li-a {
-                color: #2980b9 !important;
+                color: #2d8cf0 !important;
                 font-weight: 700;
               }
 
@@ -121,7 +122,7 @@
     height: 60px;
     width: 100%;
     padding: 20px;
-    background-color: #FFFFFF;
+    background-color: #d2dae2;
     box-shadow: 10px 0px 17px rgba(72, 72, 72, 0.2);
   }
 
