--- a/Android/lab10/src/app/src/main/res/layout/activity_query_contact.xml
+++ b/Android/lab10/src/app/src/main/res/layout/activity_query_contact.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="选择查询方法: "/>
+        android:text="选择查询方法: " />
 
     <RadioGroup
         android:id="@+id/query_contact_radio_group"
@@ -21,13 +20,14 @@
             android:id="@+id/query_contact_radio_button_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="按姓名"/>
+            android:text="按姓名"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/query_contact_radio_button_mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="按手机号码"/>
+            android:text="按手机号码" />
 
     </RadioGroup>
 
@@ -38,12 +38,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="输入关键字: "/>
+            android:text="输入关键字: " />
 
         <EditText
             android:id="@+id/query_contact_edit_view_key"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
@@ -51,6 +51,6 @@
         android:id="@+id/query_contact_button_query"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="查询"/>
+        android:text="查询" />
 
 </LinearLayout>
