完成 android-lab11 代码，实验报告未写

--- a/Android/lab11/app/app/src/main/res/layout/activity_main.xml
+++ b/Android/lab11/app/app/src/main/res/layout/activity_main.xml
@@ -59,4 +59,9 @@
 
     </LinearLayout>
 
+    <VideoView
+        android:id="@+id/main_video_view"
+        android:layout_width="wrap_content"
+        android:layout_height="10dp" />
+
 </LinearLayout>
