--- a/Android/lab11/app/app/src/main/res/layout/music_item.xml
+++ b/Android/lab11/app/app/src/main/res/layout/music_item.xml
@@ -7,21 +7,21 @@
     <TextView
         android:id="@+id/music_item_text_view_id"
         android:layout_width="20dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/music_item_text_view_title"
         android:layout_width="150dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/music_item_text_view_artist"
         android:layout_width="150dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/music_item_text_view_duration"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
