添加【Android】lab11 演示视频

--- a/Android/lab11/app/app/src/main/res/layout/activity_main.xml
+++ b/Android/lab11/app/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
             android:id="@+id/main_button_next"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text="▶I"
+            android:text="▶|"
             android:textSize="10dp" />
 
     </LinearLayout>
