--- a/JSP-吉尔/lab04/191220224-Exp4/224Exp4/web/191220224-Exp4.css
+++ b/JSP-吉尔/lab04/191220224-Exp4/224Exp4/web/191220224-Exp4.css
@@ -9,7 +9,7 @@ body {
 #header {
 	height: 28px;
 	width: 800px;
-	background-image: url(191220xxx-bg.jpg);
+	background-image: url(191220224-bg.jpg);
 	background-repeat: repeat;	/*不需要重复时用no-repeat*/
 	margin: 0px 0px 3px 0px;
 }
